--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,17 +10,18 @@ spring:
       enabled: true
     add-properties: false
   datasource:
-    #url: jdbc:mysql://db-student.caoaqarffybx.us-east-1.rds.amazonaws.com:3306/service-student?useUnicode=true&characterEncoding=utf8
-    #username: admin
-    #password: ENC(ykEmwI79pjVHJ86lKl9/x25i1wNbJXBT)
-    url: jdbc:mysql://localhost:3306/academic_system?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: ENC(5quOixJemPFM0CMX/ylGyPf6gm5TqFv+)
+    url: jdbc:mysql://db-student.caoaqarffybx.us-east-1.rds.amazonaws.com:3306/service-student?useUnicode=true&characterEncoding=utf8
+    username: admin
+    password: ENC(ykEmwI79pjVHJ86lKl9/x25i1wNbJXBT)
+    #url: jdbc:mysql://localhost:3306/academic_system?useUnicode=true&characterEncoding=utf8
+    #username: root
+    #password: ENC(5quOixJemPFM0CMX/ylGyPf6gm5TqFv+)
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maxLifeTime: 600000
   jpa:
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
     hibernate:
       ddl-auto: update
